--- a/app/src/main/res/layout/activity_podcaster.xml
+++ b/app/src/main/res/layout/activity_podcaster.xml
@@ -4,16 +4,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PodcasterActivity">
-    <ScrollView
-        android:id="@+id/SCROLLER_ID"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical"
-        android:fillViewport="true">
-
-        <TextView android:id="@+id/texview1" android:text="@string/hello_world" android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </ScrollView>
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/GRID_ID"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnWidth="90dp"
+        android:numColumns="3"
+        android:verticalSpacing="5dp"
+        android:horizontalSpacing="5dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center"
+        />
 
 </RelativeLayout>
