--- a/app/src/main/res/layout/fragment_search_dialog.xml
+++ b/app/src/main/res/layout/fragment_search_dialog.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:layout_marginTop="20dp"
-        android:hint="Search Keywords"/>
+        android:hint="Search Keywords"
+        android:maxLines="1"/>
 
     <TextView
         android:id="@+id/SRCHFRAG_TV_SOURCE"
